# rs_db

./: Cargo.toml  README.md
crates/rs_db_parser/: Cargo.toml
crates/rs_db_parser/src/: errors.rs  lib.rs  parse.rs  value.rs
crates/rs_db_parser/src/ast/commands/: create.rs  insert.rs
crates/rs_db_parser/src/ast/commands/snapshots/: rs_db_parser__ast__commands__create__tests__case_column_parse@col-integer.snap  rs_db_parser__ast__commands__create__tests__case_column_parse@col-str.snap  rs_db_parser__ast__commands__create__tests__case_statement_parse@1.snap  rs_db_parser__ast__commands__insert__tests__case@1.snap  (+5 more)
crates/rs_db_parser/src/parsers/: identifier.rs  mod.rs  number.rs  row.rs
crates/rs_db_parser/src/snapshots/: rs_db_parser__value__tests__case@neg-i128.snap  rs_db_parser__value__tests__case@neg-i16.snap  rs_db_parser__value__tests__case@neg-i32.snap  rs_db_parser__value__tests__case@neg-i64.snap  rs_db_parser__value__tests__case@neg-i8.snap  rs_db_parser__value__tests__case@pos-i128.snap  rs_db_parser__value__tests__case@pos-i16.snap  rs_db_parser__value__tests__case@pos-i32.snap  rs_db_parser__value__tests__case@pos-i64.snap  rs_db_parser__value__tests__case@pos-i8.snap  rs_db_parser__value__tests__case@pos-u128.snap  rs_db_parser__value__tests__case@pos-u16.snap  rs_db_parser__value__tests__case@pos-u32.snap  rs_db_parser__value__tests__case@pos-u64.snap  rs_db_parser__value__tests__case@pos-u8.snap  rs_db_parser__value__tests__case@simple-str-2.snap  rs_db_parser__value__tests__case@simple-str-3.snap  rs_db_parser__value__tests__case@simple-str.snap
