[package]
name = "rs_db_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
bigdecimal = { workspace = true }
nom = "7.1.3"
nom_locate = "4.1.0"
nom-supreme = "0.8.0"

[dev-dependencies]
insta = { version = "1.31.0", features = ["json"] }
